<resources>
    <string name="app_name">Calculator</string>

    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>

    <string name="dot">.</string>
    <string name="del">del</string>
    <string name="clr">clr</string>

    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="subtraction">-</string>
    <string name="add">+</string>
    <string name="equals">=</string>

    <string name="opening_bracket">(</string>
    <string name="closing_bracket">)</string>
    <string name="dollar">$</string>
    <string name="euro">€</string>

    <string name="arrow">arrow</string>

    <string name="clear">clear</string>
    <string name="clearHistoryButtonAlertMessage">Clear history and memory?</string>
    <string name="clearHistorySuccessToast">History has been cleared successfully</string>

</resources>